--- a/src/App.css
+++ b/src/App.css
@@ -19,21 +19,20 @@ li {
   list-style: none;
 }
 
-/* navbar style start  */
 .main-nav {
   width: 100%;
   height: 10rem;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-  /* padding: auto 10rem; */
+ /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
+ 
   display: grid;
   grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
 }
 
 .logo {
   display: grid;
-  grid-column: 2/3;
-  /* background-color: antiquewhite; */
+  grid-column: 2/2;
+  background-color: black;
   justify-content: start;
   align-items: center;
 }
