--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -19,66 +19,40 @@ li {
   list-style: none;
 }
 
+/* 
+ 
+
+/* navbar style start  */
+
 .main-nav {
   width: 100%;
   height: 10rem;
- /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
- 
   display: grid;
   grid-template-columns: 10rem 1fr 2fr 1fr 10rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 
 .logo {
   display: grid;
-  grid-column: 1/2;
-  background-color: black;
+  /* background-color: #3b5998; */
+  grid-column: 2/3;
   justify-content: start;
   align-items: center;
 }
 
-.logo h2 {
-  font-size: 2.5rem;
-  font-weight: 400;
-  text-transform: uppercase;
-  background: -webkit-linear-gradient(#eee, rgb(69, 57, 248));
-  /*-webkit-background-clip: text;*/
-  -webkit-text-fill-color: transparent;
-}
-
-.logo h2 span {
-  font-size: 3.5rem;
-}
-
 .menu-link {
-  grid-column: 2/3;
-  /* background-color: aquamarine; */
+  grid-column: 3/4;
 }
 
 .menu-link ul {
   height: 10rem;
   display: flex;
   justify-content: space-around;
-  align-items: right;
-}
-
-.menu-link ul li {
-  font-size: 1.8rem;
-}
-
-.menu-link ul li a {
-  color: rgba(0, 0, 3, 0.8);
-  transition: 0.5s;
-}
-.menu-link ul li:hover > a {
-  transform-origin: left;
-  color: rgba(0, 0, 3, 1);
-  text-decoration: underline;
-  transition: 0.5s;
+  align-items: center;
 }
 
 .social-media {
-  /* background-color: black; */
   grid-column: 4/5;
 }
 
@@ -87,10 +61,46 @@ li {
   display: grid;
   grid-template-columns: 3fr repeat(3, 1fr);
   align-items: center;
+  justify-content: flex-end;
+}
+
+.social-media ul li {
+  text-align: right;
 }
 
 .social-media ul li:first-child {
   grid-column: 2/3;
+}
+
+/* ----------- Grid part ends ----------------- */
+
+.logo h2 {
+  font-size: 2.5rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  background: -webkit-linear-gradient(#eee, rgb(69, 57, 248));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.logo h2 span {
+  font-size: 3.5rem;
+}
+
+.menu-link ul li {
+  font-size: 1.8rem;
+}
+
+.menu-link ul li a {
+  text-transform: capitalize;
+  color: rgba(0, 0, 3, 0.8);
+  transition: 0.5s;
+}
+.menu-link ul li:hover > a {
+  transform-origin: left;
+  color: rgba(0, 0, 3, 1);
+  text-decoration: underline;
+  transition: 0.5s;
 }
 
 .social-media ul li {
