--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -52,25 +52,7 @@ li {
   align-items: center;
 }
 
-.social-media {
-  grid-column: 4/5;
-}
 
-.social-media ul {
-  height: 10rem;
-  display: grid;
-  grid-template-columns: 3fr repeat(3, 1fr);
-  align-items: center;
-  justify-content: flex-end;
-}
-
-.social-media ul li {
-  text-align: right;
-}
-
-.social-media ul li:first-child {
-  grid-column: 2/3;
-}
 
 /* ----------- Grid part ends ----------------- */
 
@@ -103,46 +85,10 @@ li {
   transition: 0.5s;
 }
 
-.social-media ul li {
-  font-size: 1.8rem;
-}
 
-.social-media .hamburger-menu {
-  display: none;
-}
 
-.facebook {
-  color: #3b5998;
-}
 
-.instagram {
-  color: #c32aa3;
-}
 
-.youtube {
-  color: #ff0000;
-}
-
-/* hero section   */
-
-.hero-section {
-  height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.hero-section p {
-  font-size: 3rem;
-  text-transform: capitalize;
-}
-
-.hero-section h1 {
-  font-size: 5rem;
-  text-transform: uppercase;
-  text-align: center;
-}
 
 /* responsive css style  */
 @media (max-width: 1080px) {
@@ -152,8 +98,8 @@ li {
   }
 
   .logo,
-  .menu-link ul,
-  .social-media ul {
+  .menu-link ul
+   {
     height: 8rem;
   }
 }
@@ -165,17 +111,17 @@ li {
     grid-template-columns: 2rem 2fr 3fr 2rem 2rem;
   }
 
-  .menu-link {
-    display: none;
-  }
+  /*.menu-link {
+    display:contents;
+  }*/
 
-  .logo,
-  .social-media ul {
+  .logo
+   {
     height: 7rem;
   }
 
   .mobile-menu-link {
-    grid-column: 2/4;
+   
     position: relative;
     z-index: 99;
   }
@@ -205,86 +151,35 @@ li {
     transition-delay: 0.2s;
   }
 
-  .social-media {
-    grid-row: 1/2;
-    grid-column: 3/5;
-    justify-items: end;
-    align-items: center;
-    transition: all 2s linear;
-  }
-
-  .social-media .social-media-desktop {
-    height: 0;
-    display: none;
-  }
-
-  .social-media {
-    height: 7rem;
-    display: flex;
-    justify-self: end;
-    align-items: center;
-  }
-
-  .social-media .hamburger-menu {
-    display: block;
-    font-size: 2.5rem;
-  }
 }
 
 @media (max-width: 798px) {
   .main-nav {
     height: 6rem;
-    grid-template-columns: 1rem 2fr 1fr 1fr 1rem;
+    grid-template-columns: 1rem 0fr 0fr 0fr 1rem;
   }
 
-  .logo,
-  .social-media ul {
+  .logo
+   {
     height: 6rem;
   }
 
-  .social-media {
-    height: 6rem;
-    display: flex;
-    justify-self: end;
-    align-items: center;
-  }
-
-  .social-media .hamburger-menu {
-    display: block;
-    font-size: 2.5rem;
-  }
+  
+  
 }
 
 @media (max-width: 520px) {
   .main-nav {
     height: 6rem;
-    grid-template-columns: 1rem 4fr 1fr 1fr 1rem;
+    grid-template-columns: 1rem 0fr 1fr 1fr 1rem;
   }
 
-  .logo,
-  .social-media ul {
+  .logo
+   {
     height: 6rem;
   }
 
   .logo h2 {
     font-size: 2rem;
-  }
-
-  .social-media {
-    height: 6rem;
-    display: flex;
-    justify-self: end;
-    align-items: center;
-  }
-
-  .social-media .hamburger-menu {
-    display: block;
-    font-size: 2.5rem;
-  }
-
-  /* hero section  */
-
-  .hero-section h1 {
-    font-size: 3.8rem;
   }
 }
