--- a/src/components/style/login.css
+++ b/src/components/style/login.css
@@ -18,3 +18,25 @@
     border: 0.5px solid #DBDBDB;
     color: white;
 }
+.loginPage>section>span{
+    width: 100%;
+    justify-content: space-evenly;
+    color: #AF0404;
+    font-size: 25px;
+}
+.loginPage>section>button{
+    width: 30%;
+    margin-left: 35%;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    padding: 5px;
+    font-size: 20px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 0.5px solid #DBDBDB;
+    box-shadow: 5px 3px 10px #00000029;
+    border-radius: 8px;
+}
+.loginPage>section>p>span{
+    color: #AF0404;
+    font-weight: 600;
+}
